--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "csv-parser": "^3.0.0",
     "mongodb": "^4.2.2",
-    "next": "12.0.7",
+    "next": "^12.0.7",
     "node-html-parser": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
