--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "axios-rate-limit": "^1.3.0",
+    "basic-auth": "^2.0.1",
     "csv-parser": "^3.0.0",
     "mongodb": "^4.2.2",
     "next": "^12.0.7",
@@ -18,6 +20,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/basic-auth": "^1.1.3",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
