--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
     "axios-rate-limit": "^1.3.0",
     "basic-auth": "^2.0.1",
