--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios-rate-limit": "^1.3.0",
     "basic-auth": "^2.0.1",
     "csv-parser": "^3.0.0",
+    "date-fns": "^2.27.0",
     "mongodb": "^4.2.2",
     "next": "^12.0.7",
     "node-html-parser": "^5.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
