--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-html-parser": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-spring": "^9.3.3"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
