--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-spring": "^9.3.3"
+    "react-spring": "^9.3.3",
+    "superjson": "^1.8.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-superjson-next": "^0.4.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.5.0",
