--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-spring": "^9.3.3",
-    "superjson": "^1.8.0"
+    "superjson": "^1.8.0",
+    "zustand": "^3.6.8"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
