--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-spring": "^9.3.3",
     "superjson": "^1.8.0",
+    "swr": "^1.1.2",
     "yup": "^0.32.11",
     "zustand": "^3.6.8"
   },
