--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
     "axios-rate-limit": "^1.3.0",
