--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@react-google-maps/api": "^2.7.0",
+    "@turf/turf": "^6.5.0",
     "axios": "^0.24.0",
     "axios-rate-limit": "^1.3.0",
     "basic-auth": "^2.0.1",
