--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-spring": "^9.3.3",
+    "simplebar-react": "^2.3.6",
     "swr": "^1.1.2",
     "yup": "^0.32.11",
     "zustand": "^3.6.8"
